--- a/bootcamp/templates/bootcamp/scholarship.html
+++ b/bootcamp/templates/bootcamp/scholarship.html
@@ -44,7 +44,7 @@
                 <div class="scholar-card-img-container">
                   <img class="scholar-card-img" src="{% static 'bootcamp/assets/Shortlist.png' %}" />
                 </div>
-                <div class="scholar-card-title">Assignments</div>
+                <div class="scholar-card-title">Shortlist</div>
                 <div class="scholar-card-desc">
                   You will be shortlisted as per our team review on our website
                 </div>
