--- a/bootcamp/templates/bootcamp/base.html
+++ b/bootcamp/templates/bootcamp/base.html
@@ -1,91 +1,165 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="{% static 'bootcamp/assets/logo.ico' %}">
-    <link rel="stylesheet" href="{% static 'bootcamp/assets/bootstrap.css' %}"/>
-    <script src="{% static 'bootcamp/assets/jquery.js' %}"></script>
-    <script src="{% static 'bootcamp/assets/bootstrap.js' %}"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>Incwell Bootcamp</title>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="icon" href="{% static 'bootcamp/assets/logo.ico' %}">
+  <link rel="stylesheet" href="{% static 'bootcamp/assets/bootstrap.css' %}" />
+  <script src="{% static 'bootcamp/assets/jquery.js' %}"></script>
+  <script src="{% static 'bootcamp/assets/bootstrap.js' %}"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <title>Incwell Bootcamp</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139628199-1"></script>
 
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-139628199-1');
   </script>
-   
+
   {% block script %}
 
-{% endblock script %}
-    <link rel="stylesheet" href="{% static 'bootcamp/assets/style.css' %}" />
+  {% endblock script %}
 
-  <link rel="stylesheet" href="{% static 'bootcamp/assets/wow/animate.css' %}"/>
-
+  <link rel="stylesheet" href="{% static 'bootcamp/assets/wow/animate.css' %}" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="{% static 'bootcamp/assets/wow/animate.js' %}"></script>
- 
+  <link rel="stylesheet" href="{% static 'bootcamp/assets/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'bootcamp/assets/style-min.css' %}" />
+
   <script>
     new WOW().init();
   </script>
   <!-- Google analytics end -->
-    </head>
-  <body {% block course-container %} {% endblock course-container %}>
-    
-    {% block mentors %}
-    
-    {% endblock mentors %}
-    {% block index %}
-    
-    {% endblock index %}
-    
-    {% block courses %}
-    
-    {% endblock courses %}
-    <div class="body-container mentor-main">
-      <nav class="navbar navibar">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'index' %}">
-            <img src="{% static 'bootcamp/assets/Bootcamp (1).png' %}" class="logo"/></a>
-          </div>
+</head>
 
+<body {% block course-container %} {% endblock course-container %}>
+
+  {% block index %}
+
+  {% endblock index %}
+  {% block courses1%}
+
+  {% endblock courses1 %}
+  {% block mentors1 %}
+
+  {% endblock mentors1 %}
+  <div class="w3-sidebar w3-bar-block w3-card w3-animate-right"
+    style="display:none;right:0;z-index:11;width:100%;background:none;box-shadow:none" id="rightMenu">
+    <div style="width:50%;float:left;height:100%;" onclick="closeRightMenu()">
+    </div>
+    <div
+      style="width:50%;float:right;height:100%;background:#fff;box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);">
+      <button onclick="closeRightMenu()" class="w3-bar-item w3-button w3-large">&times;</button>
+      {% comment %} <a href="#" class="w3-bar-item w3-button">Link 1</a>
+      <a href="#" class="w3-bar-item w3-button">Link 2</a>
+      <a href="#" class="w3-bar-item w3-button">Link 3</a> {% endcomment %}
+      <ul class="nav navbar-nav navbar-right" style="padding:0 25px">
+            <li class="navlist">
+              <a href="{% url 'about' %}" class="navlink {% if request.path == '/about' %} nav-active {% endif %}">
+                About Us</a>
+            </li>
+            <li class="navlist">
+              <a href="{% url 'courses' %}"
+                class="navlink {% if request.path == '/courses' %} nav-active {% endif %}">Courses</a>
+            </li>
+            <li class="navlist">
+              <a href="{% url 'mentors' %}" class="navlink {% if request.path == '/mentors' %} nav-active {% endif %}">
+                Mentors</a>
+            </li>
+            <li class="navlist">
+              <a href="{% url 'events' %}" class="navlink {% if request.path == '/events' %} nav-active {% endif %}">
+                Events</a>
+            </li>
+            <li class="navlist">
+              <a href="{% url 'contact' %}"
+                class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
+            </li>
+            <li class="unset-nav">
+              <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
+            </li>
+          </ul>
+    </div>
+  </div>
+  <div class="body-container mentor-main">
+    <nav class="navbar navibar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" onclick="openRightMenu()">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/"><img src="{% static 'bootcamp/assets/Bootcamp (1).png' %}"
+              class="logo" /></a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
             <li class="navlist">
-              <a href="{% url 'about' %}" class="navlink {% if request.path == '/about' %} nav-active {% endif %}"> About Us</a>
+              <a href="{% url 'about' %}" class="navlink {% if request.path == '/about' %} nav-active {% endif %}">
+                About Us</a>
             </li>
             <li class="navlist">
-              <a href="{% url 'courses' %}" class="navlink {% if request.path == '/courses' %} nav-active {% endif %}">Courses</a>
+              <a href="{% url 'courses' %}"
+                class="navlink {% if request.path == '/courses' %} nav-active {% endif %}">Courses</a>
             </li>
             <li class="navlist">
-              <a href="{% url 'mentors' %}" class="navlink {% if request.path == '/mentors' %} nav-active {% endif %}"> Mentors</a>
+              <a href="{% url 'mentors' %}" class="navlink {% if request.path == '/mentors' %} nav-active {% endif %}">
+                Mentors</a>
             </li>
             <li class="navlist">
-              <a href="{% url 'events' %}" class="navlink {% if request.path == '/events' %} nav-active {% endif %}"> Events</a>
+              <a href="{% url 'events' %}" class="navlink {% if request.path == '/events' %} nav-active {% endif %}">
+                Events</a>
             </li>
             <li class="navlist">
-              <a href="{% url 'contact' %}" class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
+              <a href="{% url 'contact' %}"
+                class="navlink {% if request.path == '/contact' %} nav-active {% endif %}">Contact</a>
             </li>
             <li class="unset-nav">
               <a href="{% url 'enroll' %}" class="navlink-Enroll"> Enroll</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+    {% block mentors2 %}
+
+    {% endblock mentors2 %}
+
+
+    {% block courses2 %}
+
+    {% endblock courses2 %}
     {% block content %}
 
     {% endblock content %}
     {% block events-script %}
-    
+
     {% endblock events-script %}
-    </div>
-   </body>
+  </div>
+
+  <script>
+    function openRightMenu() {
+      document.getElementById("rightMenu").style.width = "100%";
+      document.getElementById("rightMenu").style.display = "block";
+    }
+
+    function closeRightMenu() {
+      document.getElementById("rightMenu").style.transition = "all 0.4s";
+      document.getElementById("rightMenu").style.width = "0px";
+      setTimeout(() => {
+        document.getElementById("rightMenu").style.display = "none";
+      }, 400);
+
+
+    }
+  </script>
+</body>
+
 </html>
